# real_time_adtech_metrics_pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  docker-compose.yml  pyproject.toml  run_pipeline.py
.github/workflows/: cd.yml  ci.yml  pipelines.yml
api/: main.py
batch/: batch_job.py
common/: config.py  logger.py  monitor.py  spark.py
config/: dev.yaml  docker.yaml
core/: config.py  logger.py  metrics.py  spark.py
dashboard/: app.py
deploy/: deploy.sh
examples/: pipeline.yaml
glue/: batch_job.py  streaming_job.py
infra/: glue.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
producer/: producer.py
scripts/: pipeline.py
streaming/: processor.py  streaming_job.py
tests/: test.py  test_producer.py  test_streaming.py
