[project]
name = "ml-streaming-pipeline"
version = "0.1.0"
description = "End-to-end ML streaming pipeline with Kafka, Spark and Streamlit"
authors = [{ name = "William" }]
requires-python = ">=3.10"

dependencies = [
    "pydantic==2.6.4",
    "pyyaml==6.0.1",
    "pandas==2.2.1"
]

# -------------------------
# OPTIONAL DEPENDENCIES
# -------------------------

[project.optional-dependencies]

streaming = [
    "pyspark==3.5.1",
    "kafka-python==2.0.2"
]

batch = [
    "pyspark==3.5.1"
]

dashboard = [
    "streamlit==1.32.2",
    "pyspark==3.5.1"
]

dev = [
    "black==24.3.0",
    "isort==5.13.2",
    "flake8==7.0.0",
    "pytest==8.1.1"
]

# -------------------------
# TOOLING CONFIG
# -------------------------

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
