[project]
name = "real-time-adtech-metrics-pipeline"
version = "0.1.0"
description = "Real-time AdTech metrics pipeline with Kafka, Spark Structured Streaming and MinIO"
authors = [{ name = "William" }]
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "prometheus-client>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["batch*", "core*", "glue*", "producer*", "streaming*", "dashboard*", "api*"]

[project.optional-dependencies]

streaming = [
    "pyspark>=3.5",
    "kafka-python-ng>=2.2",
]

batch = [
    "pyspark>=3.5",
]

producer = [
    "kafka-python-ng>=2.2",
]

dashboard = [
    "streamlit>=1.32",
    "pyspark>=3.5",
]

api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "kafka-python-ng>=2.2",
]

dev = [
    "black>=24.3",
    "isort>=5.13",
    "ruff>=0.4",
    "pytest>=8.1",
    "pre-commit>=3.7",
]

# -------------------------
# TOOLING CONFIG
# -------------------------

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # flake8-like + imports
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
